# RAGops

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: .trigger  ci-cd.yml
airflow/: .env  .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: dag_cs.py  dag_econ.py  dag_eess.py  dag_math.py  dag_physic.py  dag_qbio.py  dag_qfin.py  dag_stats.py
airflow/logs/data/: arxiv_cs_20250801_20250901.csv
backend/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  docker-compose.yml  requirements.txt  setup.sh  test_credentials.py  test_setup.py
backend/deploy/: cloud-run.sh
backend/rag_app/: config.py  db.py  eval.py  llm.py  models.py  rag_embeddings.py  retrieval.py  sem_cache.py  sem_cache_lc.py
backend/tests/: conftest.py  test_api_status.py  test_ingestion_and_rerank.py  test_integration.py
docs/: index.html
examples/: ragops_milvus.db
images/: answer.json  response_RAG.json
ingestion/: __init__.py  ingestion_cs.py  ingestion_econ.py  ingestion_eess.py  ingestion_math.py  ingestion_physic.py  ingestion_qbio.py  ingestion_qfin.py  ingestion_stats.py
logging/: README.md  docker-compose.logging.yml  filebeat.docker.yml
observability/: README.md  docker-compose.observability.yml  prometheus.yml
test/: test.py
