[project]
name = "ragops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "db-dtypes>=1.4.3",
    "feedparser>=6.0.11",
    "fsspec>=2025.9.0",
    "gcsfs>=2025.9.0",
    "google-cloud-bigquery>=3.36.0",
    "ipykernel>=6.30.1",
    "llama-index>=0.12.52",
    "openai>=1.106.0",
    "cohere>=5.5.8",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pymilvus>=2.6.1",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "ecs-logging>=2.2.0",
    "redis>=5.0.0",
    # removed langchain, langchain-community, redisvl (not used in production)
    "pytest>=8.4.2",
]
