[project]
name = "ragops-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
    "fsspec>=2024.6.0",
    "gcsfs>=2024.6.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
]
